# briq

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/user/by-wallet/: route.ts
app/api/user/update-profile/: route.ts
app/app/: layout.tsx  page.tsx
app/app/(main)/: layout.tsx
app/app/(main)/agreements/: page.tsx
app/app/(main)/dashboard/: page.tsx
app/app/(main)/payments/: page.tsx
app/app/(main)/profile/: page.tsx
app/app/(main)/properties/: page.tsx
app/app/(main)/properties/[id]/: page.tsx
app/app/(main)/properties/new/: page.tsx
app/app/(main)/reviews/: page.tsx
app/app/onboarding/: page.tsx
components/: app-navbar.tsx  hero.tsx  login-dialog.tsx  navbar.tsx  onboarding-guard.tsx  property-card.tsx  rental-request-dialog.tsx
components/ui/: calendar.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  sonner.tsx  tabs.tsx
contracts/: Cargo.toml
contracts/briq_token/: Cargo.toml
contracts/briq_token/src/: lib.rs
contracts/escrow_manager/: Cargo.toml
contracts/escrow_manager/src/: lib.rs
contracts/property_registry/: Cargo.toml
contracts/property_registry/src/: lib.rs
contracts/rental_agreement/: Cargo.toml
contracts/rental_agreement/src/: lib.rs
contracts/review_system/: Cargo.toml
contracts/review_system/src/: lib.rs
lib/: auth.ts
lib/contracts/: escrow-manager.ts  index.ts  property-registry.ts  rental-agreement.ts  stellar-client.ts  use-wallet.ts
