[workspace]
resolver = "2"
members = [
  "property_registry",
  "rental_agreement",
  "escrow_manager",
  "review_system",
  "briq_token",
]

[workspace.dependencies]
soroban-sdk = "21.7.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
